サイト修正

--- a/src/estimate.html
+++ b/src/estimate.html
@@ -159,7 +159,7 @@
                 ぜひ一度、お見積もりフォーム<br class="sp-br">をご利用ください。
                 </p>
             </div>
-            <div class="estimate__btns">
+            <!-- <div class="estimate__btns">
                 <a class="estimate__item estimate__item--line">
                     <div class="estimate__item--logo"><img src="./assets/images/estimate/estimate_logo1.svg" alt=""></div>
                     <p class="estimate__item--text">公式LINEで<br class="pc-br">お見積もり依頼</p>
@@ -174,7 +174,7 @@
                         <p>必要事項をご入力の上、<br>送信ください！</p>
                     </div>
                 </a>
-            </div>
+            </div> -->
         </section>
         <section  id="estimateForm" class="estimate__form">
             <div class="page__title--inner">
