--- a/src/index.html
+++ b/src/index.html
@@ -51,18 +51,18 @@
             <div class="header__container">
                 <div class="snsNav">
                     <ul class="snsNav__list">
-                        <li class="snsNav__list--item">
+                        <!-- <li class="snsNav__list--item">
                             <a href=""><img src="./assets/images/icon_x.svg" alt="x" /></a>
-                        </li>
+                        </li> -->
                         <li class="snsNav__list--item">
-                            <a href=""><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
-                        </li>
-                        <li class="snsNav__list--item">
-                            <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
+                            <a href="https://www.instagram.com/tmc.4514/"><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
                         </li>
                         <!-- <li class="snsNav__list--item">
-                            <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                            <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
                         </li> -->
+                        <li class="snsNav__list--item">
+                            <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                        </li>
                     </ul>
                 </div>
                 <div class="headerNavMenu">
@@ -133,23 +133,26 @@
                         <div class="menu__link">
                             <ul class="link__list">
                                 <li class="link__item"><a href="./policy.html">プライバシーポリシー</a></li>
-                                <li class="link__item icon__item1"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate.svg" alt=""><span>たかくら不動産屋さん</a></li>
+                                <!-- <li class="link__item icon__item1"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate.svg" alt=""><span>たかくら不動産屋さん</a></li> -->
                                 <li class="link__item"><a href="./legal.html">特定商取引法に基づく表記</a></li>
-                                <li class="link__item icon__item2"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle.svg" alt=""></span>たかくらリサイクルセンター</a></li>
+                                <!-- <li class="link__item icon__item2"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle.svg" alt=""></span>たかくらリサイクルセンター</a></li> -->
                                 <li class="link__item"><a href="./assets/pdf/yakkan.pdf" target="_blank">標準引越運送約款</a></li>
+                                <li class="link__item sns__item">
+                                    <a href="https://www.instagram.com/tmc.4514/"><img src="./assets/images/instagram_icon-black.svg" alt="instaigram" /></a>
+                                </li>
                             </ul>
                         </div>
                         <div class="menu__sns">
                             <ul class="sns__list">
-                                <li class="sns__item">
+                                <!-- <li class="sns__item">
                                     <a href=""><img src="./assets/images/icon_x.svg" alt="x" /></a>
-                                </li>
-                                <li class="sns__item">
-                                    <a href=""><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
-                                </li>
-                                <li class="sns__item">
+                                </li> -->
+                                <!-- <li class="sns__item">
+                                    <a href="https://www.instagram.com/tmc.4514/"><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
+                                </li> -->
+                                <!-- <li class="sns__item">
                                     <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -284,12 +287,12 @@
             <div class="about__chara--img3">
                 <img src="./assets/images/top/about/img-about_chara3.svg" />
             </div>
-            <div class="about__human--img1">
+            <!-- <div class="about__human--img1">
                 <img src="./assets/images/top/about/img-about_human1.png" />
             </div>
             <div class="about__human--img2">
                 <img src="./assets/images/top/about/img-about_human2.png" />
-            </div>
+            </div> -->
         </section>
         <section class="service">
             <div class="page__title--inner">
@@ -644,23 +647,23 @@
                                 <li class="footerNav__list--item"><a href="./assets/pdf/yakkan.pdf" target="_blank"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
-                        <div class="footerBtn__inner">
+                        <!-- <div class="footerBtn__inner">
                             <a class="footerBtn realstate">たかくら不動産屋さん</a>
                             <a class="footerBtn recycle">たかくらリサイクルセンター</a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="footerNav__column2">
                         <p class="copyright">© たかくら引越センター all rights reserved.</p>
                         <div class="footer__snsInner">
-                            <a class="footer__snsIcon" href="#">
+                            <!-- <a class="footer__snsIcon" href="#">
                                 <img src="./assets/images/icon_footer-x.svg" alt="" />
-                            </a>
-                            <a class="footer__snsIcon" href="#">
+                            </a> -->
+                            <a class="footer__snsIcon" href="https://www.instagram.com/tmc.4514/">
                                 <img src="./assets/images/icon_footer-instagram.svg" alt="" />
                             </a>
-                            <a class="footer__snsIcon" href="#">
+                            <!-- <a class="footer__snsIcon" href="#">
                                 <img src="./assets/images/icon_footer-line.svg" alt="" />
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
