文字の出現アニメーション追加

--- a/src/index.html
+++ b/src/index.html
@@ -219,8 +219,8 @@
                     <img src="./assets/images/top/news/img-news_tv.svg" alt="" />
                     <div class="news__inner--textArea">
                         <div class="page__title--inner">
-                            <p class="page__subTitle">NEWS</p>
-                            <h2 class="page__title">お知らせ</h2>
+                            <p data-anime="is-visible" data-anime="is-visible" class="page__subTitle">NEWS</p>
+                            <h2 class="page__title"><span data-anime="is-visible" class="letter">お</span><span data-anime="is-visible" class="letter">知</span><span data-anime="is-visible" class="letter">ら</span><span data-anime="is-visible" class="letter">せ</span></h2>
                             <!-- <img class="page__title" src="./assets/images/top/news/img-news_title.png" alt="" /> -->
                         </div>
                         <div class="page__info--inner">
@@ -239,8 +239,10 @@
         </section>
         <section class="about">
             <div class="page__title--inner">
-                <p class="page__subTitle">ABOUT</p>
-                <h2 class="page__title">たかくら<br class="sp-br">引越センターって？</h2>
+                <p data-anime="is-visible" class="page__subTitle">ABOUT</p>
+                <h2 class="page__title">
+                    <span data-anime="is-visible" class="letter">た</span><span data-anime="is-visible" class="letter">か</span><span data-anime="is-visible" class="letter">く</span><span data-anime="is-visible" class="letter">ら</span><br class="sp-br"><span data-anime="is-visible" class="letter">引</span><span data-anime="is-visible" class="letter">越</span><span data-anime="is-visible" class="letter">セ</span><span data-anime="is-visible" class="letter">ン</span><span data-anime="is-visible" class="letter">タ</span><span data-anime="is-visible" class="letter">ー</span><span data-anime="is-visible" class="letter">っ</span><span data-anime="is-visible" class="letter">て</span><span data-anime="is-visible" class="letter">？</span>
+                </h2>
                 <!-- <div class="page__title">
                     <picture>
                         <source srcset="./assets/images/top/about/img-about_title-sp.png" media="(max-width: 767px)" />
@@ -296,8 +298,8 @@
         </section>
         <section class="service">
             <div class="page__title--inner">
-                <p class="page__subTitle">SERVICE</p>
-                <h2 class="page__title">サービス内容</h2>
+                <p data-anime="is-visible" class="page__subTitle">SERVICE</p>
+                <h2 class="page__title"><span data-anime="is-visible" class="letter">サ</span><span data-anime="is-visible" class="letter">ー</span><span data-anime="is-visible" class="letter">ビ</span><span data-anime="is-visible" class="letter">ス</span><span data-anime="is-visible" class="letter">内</span><span data-anime="is-visible" class="letter">容</span></h2>
                 <!-- <img class="page__title" src="./assets/images/top/service/img-service_title.png" alt="" /> -->
             </div>
             <div class="service__column">
@@ -349,8 +351,9 @@
         </div>
         <section class="secret">
             <div class="page__title--inner">
-                <p class="page__subTitle">たかくら引越センターはここが違う？！</p>
-                <h2 class="page__title">驚異のリピート率の<br class="sp-br">秘密</h2>
+                <p data-anime="is-visible" class="page__subTitle">たかくら引越センターはここが違う？！</p>
+                <h2 class="page__title">
+                    <span data-anime="is-visible" class="letter">驚</span><span data-anime="is-visible" class="letter">異</span><span data-anime="is-visible" class="letter">の</span><span data-anime="is-visible" class="letter">リ</span><span data-anime="is-visible" class="letter">ピ</span><span data-anime="is-visible" class="letter">ー</span><span data-anime="is-visible" class="letter">ト</span><span data-anime="is-visible" class="letter">率</span><span data-anime="is-visible" class="letter">の</span><br class="sp-br"><span data-anime="is-visible" class="letter">秘</span><span data-anime="is-visible" class="letter">密</span>
                 <!-- <div class="page__title">
                     <picture>
                         <source srcset="./assets/images/top/secret/img-secret_title-sp.png"
@@ -465,8 +468,12 @@
             <div class="message__container">
                 <div class="message__leftInner">
                     <div class="page__title--inner">
-                        <p class="page__subTitle">MESSAGE</p>
-                        <h2 class="page__title">お友達に引越しを<br>お願いするか<br>悩んでいる方へ</h2>
+                        <p data-anime="is-visible" class="page__subTitle">MESSAGE</p>
+                        <h2 class="page__title">
+                            <span data-anime="is-visible" class="letter">お</span><span data-anime="is-visible" class="letter">友</span><span data-anime="is-visible" class="letter">達</span><span data-anime="is-visible" class="letter">に</span><span data-anime="is-visible" class="letter">引</span><span data-anime="is-visible" class="letter">越</span><span data-anime="is-visible" class="letter">し</span><span data-anime="is-visible" class="letter">を</span><br>
+                            <span data-anime="is-visible" class="letter">お</span><span data-anime="is-visible" class="letter">願</span><span data-anime="is-visible" class="letter">い</span><span data-anime="is-visible" class="letter">す</span><span data-anime="is-visible" class="letter">る</span><span data-anime="is-visible" class="letter">か</span><br style="display: block;">
+                            <span data-anime="is-visible" class="letter">悩</span><span data-anime="is-visible" class="letter">ん</span><span data-anime="is-visible" class="letter">で</span><span data-anime="is-visible" class="letter">い</span><span data-anime="is-visible" class="letter">る</span><span data-anime="is-visible" class="letter">方</span><span data-anime="is-visible" class="letter">へ</span>
+                        </h2>
                         <!-- <div class="page__title threeColumnTitle">
                             <picture>
                                 <source srcset="./assets/images/top/message/img-message_title-sp.png"
@@ -504,8 +511,10 @@
         </section>
         <section class="online">
             <div class="page__title--inner">
-                <p class="page__subTitle">ONLINE STORE</p>
-                <h2 class="page__title">オンラインストア</h2>
+                <p data-anime="is-visible" class="page__subTitle">ONLINE STORE</p>
+                <h2 class="page__title">
+                    <span data-anime="is-visible" class="letter">オ</span><span data-anime="is-visible" class="letter">ン</span><span data-anime="is-visible" class="letter">ラ</span><span data-anime="is-visible" class="letter">イ</span><span data-anime="is-visible" class="letter">ン</span><span data-anime="is-visible" class="letter">ス</span><span data-anime="is-visible" class="letter">ト</span><span data-anime="is-visible" class="letter">ア</span>
+                </h2>
                 <!-- <img class="page__title" src="./assets/images/top/online/img-onlin_title.png" alt="" /> -->
             </div>
             <div class="online__columnInner">
@@ -549,8 +558,10 @@
         </section>
         <section class="instagram">
             <div class="page__title--inner">
-                <p class="page__subTitle">INSTAGRAM</p>
-                <h2 class="page__title">公式インスタグラム</h2>
+                <p data-anime="is-visible" class="page__subTitle">INSTAGRAM</p>
+                <h2 class="page__title">
+                    <span data-anime="is-visible" class="letter">公</span><span data-anime="is-visible" class="letter">式</span><span data-anime="is-visible" class="letter">イ</span><span data-anime="is-visible" class="letter">ン</span><span data-anime="is-visible" class="letter">ス</span><span data-anime="is-visible" class="letter">タ</span><span data-anime="is-visible" class="letter">グ</span><span data-anime="is-visible" class="letter">ラ</span><span data-anime="is-visible" class="letter">ム</span>
+                </h2>
                 <!-- <img class="page__title" src="./assets/images/top/instagram/img-instagram_title.png" alt="" /> -->
             </div>
             <div class="instagram__column">
