アニメーション追加

--- a/src/index.html
+++ b/src/index.html
@@ -91,28 +91,28 @@
                                     <p class="menu__item--title">トップ</p>
                                 </a>
                             </li>
-                            <li class="menu__item menu__item2">
-                                <a href="./about.html">
-                                    <p class="menu__item--subTitle">ABOUT</p>
-                                    <p class="menu__item--title">TMCの秘密</p>
-                                </a>
-                            </li>
                             <li class="menu__item menu__item3">
                                 <a href="./news.html">
                                     <p class="menu__item--subTitle">NEWS</p>
                                     <p class="menu__item--title">おしらせ</p>
                                 </a>
                             </li>
-                            <li class="menu__item menu__item4">
-                                <a href="./characters.html">
-                                    <p class="menu__item--subTitle">CHARACTERS</p>
-                                    <p class="menu__item--title">従業員紹介</p>
-                                </a>
-                            </li>
                             <li class="menu__item menu__item5">
                                 <a href="./service.html">
                                     <p class="menu__item--subTitle">SERVICE</p>
                                     <p class="menu__item--title">サービス内容</p>
+                                </a>
+                            </li>
+                            <li class="menu__item menu__item2">
+                                <a href="./about.html">
+                                    <p class="menu__item--subTitle">ABOUT</p>
+                                    <p class="menu__item--title">TMCの秘密</p>
+                                </a>
+                            </li>
+                            <li class="menu__item menu__item4">
+                                <a href="./characters.html">
+                                    <p class="menu__item--subTitle">CHARACTERS</p>
+                                    <p class="menu__item--title">従業員紹介</p>
                                 </a>
                             </li>
                             <li class="menu__item menu__item6">
@@ -633,7 +633,9 @@
                             <img src="./assets/images/top/secret/img-secret_item1.svg" alt="" />
                         </div>
                         <div class="secretList__item--textArea">
-                            <p class="secretList__speech">01</p>
+                            <div data-anime="is-visible" class="secretList__speech">
+                                <p>01</p>
+                            </div>
                             <div class="page__subtitle miniTitle">
                                 <h4>すべての従業員が非喫煙者</h4>
                                 <!-- <img src="./assets/images/top/secret/img-secret_subtitle1.png" alt="" /> -->
@@ -655,7 +657,9 @@
                     </div>
                     <div class="secretList__item--container">
                         <div class="secretList__item--textArea">
-                            <p class="secretList__speech">02</p>
+                            <div data-anime="is-visible" class="secretList__speech">
+                                <p>02</p>
+                            </div>
                             <div class="page__subtitle twoColumnTitle">
                                 <h4>整理収納の達人が<br class="sp-br tb-br">引越しをサポート</h4>
                                 <!-- <picture>
@@ -680,7 +684,9 @@
                             <img src="./assets/images/top/secret/img-secret_item3.jpg" alt="" />
                         </div>
                         <div class="secretList__item--textArea">
-                            <p class="secretList__speech">03</p>
+                            <div data-anime="is-visible" class="secretList__speech">
+                                <p>03</p>
+                            </div>
                             <div class="page__subtitle twoColumnTitle">
                                 <h4>日本一かわいい？<br class="sp-br tb-br">こだわりの段ボール</h4>
                                 <!-- <picture>
@@ -705,7 +711,9 @@
                     </div>
                     <div class="secretList__item--container">
                         <div class="secretList__item--textArea">
-                            <p class="secretList__speech">04</p>
+                            <div data-anime="is-visible" class="secretList__speech">
+                                <p>04</p>
+                            </div>
                             <div class="page__subtitle miniTitle highTitle">
                                 <h4>驚異の<span class="narrow">リピート</span>率<span class="large__text">97</span>％?!</h4>
                                 <!-- <img src="./assets/images/top/secret/img-secret_subtitle4.png" alt="" /> -->
