--- a/src/legal.html
+++ b/src/legal.html
@@ -42,18 +42,18 @@
             <div class="header__container">
                 <div class="snsNav">
                     <ul class="snsNav__list">
-                        <li class="snsNav__list--item">
+                        <!-- <li class="snsNav__list--item">
                             <a href=""><img src="./assets/images/icon_x.svg" alt="x" /></a>
-                        </li>
+                        </li> -->
                         <li class="snsNav__list--item">
-                            <a href=""><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
-                        </li>
-                        <li class="snsNav__list--item">
-                            <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
+                            <a href="https://www.instagram.com/tmc.4514/"><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
                         </li>
                         <!-- <li class="snsNav__list--item">
-                            <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                            <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
                         </li> -->
+                        <li class="snsNav__list--item">
+                            <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                        </li>
                     </ul>
                 </div>
                 <div class="headerNavMenu">
@@ -76,28 +76,28 @@
                                     <p class="menu__item--title">トップ</p>
                                 </a>
                             </li>
-                            <li class="menu__item menu__item2">
-                                <a href="./about.html">
-                                    <p class="menu__item--subTitle">ABOUT</p>
-                                    <p class="menu__item--title">TMCの秘密</p>
-                                </a>
-                            </li>
                             <li class="menu__item menu__item3">
                                 <a href="./news.html">
                                     <p class="menu__item--subTitle">NEWS</p>
                                     <p class="menu__item--title">おしらせ</p>
                                 </a>
                             </li>
-                            <li class="menu__item menu__item4">
-                                <a href="./characters.html">
-                                    <p class="menu__item--subTitle">CHARACTERS</p>
-                                    <p class="menu__item--title">従業員紹介</p>
-                                </a>
-                            </li>
                             <li class="menu__item menu__item5">
                                 <a href="./service.html">
                                     <p class="menu__item--subTitle">SERVICE</p>
                                     <p class="menu__item--title">サービス内容</p>
+                                </a>
+                            </li>
+                            <li class="menu__item menu__item2">
+                                <a href="./about.html">
+                                    <p class="menu__item--subTitle">ABOUT</p>
+                                    <p class="menu__item--title">TMCの秘密</p>
+                                </a>
+                            </li>
+                            <li class="menu__item menu__item4">
+                                <a href="./characters.html">
+                                    <p class="menu__item--subTitle">CHARACTERS</p>
+                                    <p class="menu__item--title">従業員紹介</p>
                                 </a>
                             </li>
                             <li class="menu__item menu__item6">
@@ -124,23 +124,26 @@
                         <div class="menu__link">
                             <ul class="link__list">
                                 <li class="link__item"><a href="./policy.html">プライバシーポリシー</a></li>
-                                <li class="link__item icon__item1"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate.svg" alt=""><span>たかくら不動産屋さん</a></li>
+                                <!-- <li class="link__item icon__item1"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate.svg" alt=""><span>たかくら不動産屋さん</a></li> -->
                                 <li class="link__item"><a href="./legal.html">特定商取引法に基づく表記</a></li>
-                                <li class="link__item icon__item2"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle.svg" alt=""></span>たかくらリサイクルセンター</a></li>
+                                <!-- <li class="link__item icon__item2"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle.svg" alt=""></span>たかくらリサイクルセンター</a></li> -->
                                 <li class="link__item"><a href="./assets/pdf/yakkan.pdf" target="_blank">標準引越運送約款</a></li>
+                                <li class="link__item sns__item">
+                                    <a href="https://www.instagram.com/tmc.4514/"><img src="./assets/images/instagram_icon-black.svg" alt="instaigram" /></a>
+                                </li>
                             </ul>
                         </div>
                         <div class="menu__sns">
                             <ul class="sns__list">
-                                <li class="sns__item">
+                                <!-- <li class="sns__item">
                                     <a href=""><img src="./assets/images/icon_x.svg" alt="x" /></a>
-                                </li>
-                                <li class="sns__item">
-                                    <a href=""><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
-                                </li>
-                                <li class="sns__item">
+                                </li> -->
+                                <!-- <li class="sns__item">
+                                    <a href="https://www.instagram.com/tmc.4514/"><img src="./assets/images/icon_instagram.svg" alt="instaigram" /></a>
+                                </li> -->
+                                <!-- <li class="sns__item">
                                     <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -210,7 +213,7 @@
             <div data-anime="driving" class="movingChara">
                 <img data-anime="shaking" src="./assets/images/img-moving.svg" alt="" />
             </div>
-            <div class="movingChara__load infinite__scroll">
+            <div class="movingChara__load infinite__scroll--reverse">
                 <img class="scrolText" src="./assets/images/img-load.svg" alt="" />
                 <img class="scrolText" src="./assets/images/img-load.svg" alt="" />
                 <div class="load__bg"></div>
@@ -268,23 +271,23 @@
                                 <li class="footerNav__list--item"><a href="./assets/pdf/yakkan.pdf" target="_blank"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
-                        <div class="footerBtn__inner">
+                        <!-- <div class="footerBtn__inner">
                             <a class="footerBtn realstate">たかくら不動産屋さん</a>
                             <a class="footerBtn recycle">たかくらリサイクルセンター</a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="footerNav__column2">
                         <p class="copyright">© たかくら引越センター all rights reserved.</p>
                         <div class="footer__snsInner">
-                            <a class="footer__snsIcon" href="#">
+                            <!-- <a class="footer__snsIcon" href="#">
                                 <img src="./assets/images/icon_footer-x.svg" alt="" />
-                            </a>
-                            <a class="footer__snsIcon" href="#">
+                            </a> -->
+                            <a class="footer__snsIcon" href="https://www.instagram.com/tmc.4514/">
                                 <img src="./assets/images/icon_footer-instagram.svg" alt="" />
                             </a>
-                            <a class="footer__snsIcon" href="#">
+                            <!-- <a class="footer__snsIcon" href="#">
                                 <img src="./assets/images/icon_footer-line.svg" alt="" />
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
