--- a/src/legal.html
+++ b/src/legal.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="legal__item">
                     <h3 class="legal__h3">商品以外の必要料金</h3>
-                    <p class="legal__text">送料、振込手数料</p>
+                    <p class="legal__text">送料、振込手数料　一律●●円</p>
                 </div>
                 <div class="legal__item">
                     <h3 class="legal__h3">商品引渡し時期</h3>
