--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/page.top.css" />
     <link rel="stylesheet" href="assets/css/anime.css" />
+    <link rel="preload" href="./assets/images/img-moving.svg" as="image" type="image/svg" />
+    <link rel="preload" href="./assets/images/top/about/img-about_surround1.svg" as="image" type="image/svg" />
+    <link rel="preload" href="./assets/images/top/about/img-about_surround2.svg" as="image" type="image/svg" />
 </head>
 
 <body>
